--- a/02-javaweb/experiments/javaee-exp03-blog-serve/src/main/webapp/blog-client/src/assets/css/common.css
+++ b/02-javaweb/experiments/javaee-exp03-blog-serve/src/main/webapp/blog-client/src/assets/css/common.css
@@ -1,38 +1,3 @@
-html,
-body {
-  padding: 0;
-  margin: 0;
-  height: 100vh;
-  color: var(--text-color);
-  background-color: var(--blog-bg-color);
-}
-
-ul {
-  list-style: none;
-  padding: 0;
-  margin: 0;
-}
-
-a {
-  text-decoration: none;
-}
-
-a:link {
-  color: var(--text-color);
-}
-
-a:visited {
-  color: var(--text-color);
-}
-
-a:active {
-  color: var(--text-color);
-}
-
-a:hover {
-  color: var(--theme-color);
-}
-
 .cover {
   object-fit: cover;
 }
@@ -209,7 +174,7 @@ a:hover {
 }
 
 .hide-scroll {
-  overflow: hidden;
+  overflow-y: auto;
 }
 
 .hide-scroll::-webkit-scrollbar {
